Added test project for groovy build script
Changed "prj-test-kotlin" project to match new Groovy test project.

--- a/prj-test-groovy/build.gradle
+++ b/prj-test-groovy/build.gradle
@@ -14,18 +14,18 @@ buildscript {
 
 /** 2) use Gradle application plugin */
 plugins {
-    application
+    id("application")
 }
 
 
 /** 3) apply UniformDependenciesPlugin */
-apply(plugin = "com.thahnen.gradle.uniformdependencies")
+apply plugin: "com.thahnen.gradle.uniformdependencies"
 
 
 /** 4) local variables */
-group = "com.thahnen.gradle"
-version = "1.0.0"
-val className = "com.thahnen.gradle.prj_test_kotlin.PluginTest"
+group 'com.thahnen.gradle'
+version '1.0.0'
+def className = "com.thahnen.gradle.prj_test_groovy.PluginTest"
 
 
 /** 5) configure dependencies repository */
@@ -36,15 +36,12 @@ repositories {
 
 /** 6) dependency configuration using the UniformDependenciesPlugin */
 dependencies {
-    // this notation must be used, see:
-    // https://docs.gradle.org/current/userguide/kotlin_dsl.html#sec:kotlin_using_standard_api
-    // or project.configurations.get("<Configuration>")(...)
     implementation("com.google.code.gson:gson:2.8.6")
-    //"uImplementation"("com.google.code.gson:gson")
+    //uImplementation("com.google.code.gson:gson")
 }
 
 
 /** 7) configure application Gradle plugin */
 application {
-    mainClass.set(className)
+    mainClassName = className
 }
