First working POC using all configurations found
No custom configurations added because it does not work (yet). But the resolution strategy for dependencies does now apply logic to search for specific dependencies in provided properties file.
Also test projects configured to work with this plugin!

--- a/prj-test-groovy/build.gradle
+++ b/prj-test-groovy/build.gradle
@@ -36,8 +36,8 @@ repositories {
 
 /** 6) dependency configuration using the UniformDependenciesPlugin */
 dependencies {
-    implementation("com.google.code.gson:gson:2.8.6")
-    //uImplementation("com.google.code.gson:gson")
+    implementation("com.google.code.gson:gson")
+    implementation("com.github.stefanbirkner:system-lambda:1.2.0")
 }
 
 
