--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,8 @@
 
 # Plugin general information
 plugin.name=UniformDependenciesPlugin
+plugin.displayName=Plugin to handle uniform dependencies
+plugin.description=A plugin to handle dependencies based on a properties file provided containing all dependencies used
 plugin.group=com.thahnen.gradle
 plugin.id=com.thahnen.gradle.uniformdependencies
 plugin.class=com.thahnen.gradle.UniformDependenciesPlugin
