GitHub action publishing jUnit / JaCoCo results

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,8 +9,8 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build:
-    # Run on Ubuntu Linux
+  build-and-test:
+    name: Build and test Gradle Plugin
     runs-on: ubuntu-latest
 
     steps:
@@ -54,3 +54,23 @@ jobs:
           cd prj-test-kotlin
           ./gradlew run --refresh-dependencies
           cd ..
+  
+  publish-test-results:
+    name: Publish jUnit / JaCoCo test results
+    needs: build-and-test
+    runs-on: ubuntu-latest
+    if: success() || failure()
+
+    steps:
+      # 1) publish jUnit results
+      - name: Test results
+        uses: EnricoMi/publish-unit-test-result-action@v1
+        if: always()
+        with:
+          files: build/test-results/**/*.xml
+
+      # 2) publish JaCoCo reports
+      - name: JaCoCo coverage
+        uses: cicirello/jacoco-badge-generator@v2
+        with:
+          jacoco-cvs-file: build/reports/test/jacocoTestReport.csv
