--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -54,23 +54,16 @@ jobs:
           cd prj-test-kotlin
           ./gradlew run --refresh-dependencies
           cd ..
-  
-  publish-test-results:
-    name: Publish jUnit / JaCoCo test results
-    needs: build-and-test
-    runs-on: ubuntu-latest
-    if: success() || failure()
-
-    steps:
-      # 1) publish jUnit results
+      
+      # 8) publish jUnit results
       - name: Test results
         uses: EnricoMi/publish-unit-test-result-action@v1
         if: always()
         with:
-          files: test-results/test/TEST-com.thahnen.gradle.UniformDependenciesPluginTest.xml
-
-      # 2) publish JaCoCo reports
+          files: build/test-results/test/*.xml
+      
+      # 9) publish JaCoCo reports
       - name: JaCoCo coverage
         uses: cicirello/jacoco-badge-generator@v2
         with:
-          jacoco-csv-file: reports/jacoco/test/jacocoTestReport.csv
+          jacoco-csv-file: build/reports/jacoco/test/jacocoTestReport.csv
