--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -67,3 +67,11 @@ jobs:
         uses: cicirello/jacoco-badge-generator@v2
         with:
           jacoco-csv-file: build/reports/jacoco/test/jacocoTestReport.csv
+      
+      # 10) commit changes
+      - name: commit badges
+        uses: EndBug/add-and-commit@v7
+        with:
+          default_author: github_actions
+          message: 'upload badge'
+          add: '*.svg'
