Started working on publishing to GitHub Maven Nexus
gradle.properties updated & step added to gradle.yml action

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,10 @@ plugin.id=com.thahnen.gradle.uniformdependencies
 plugin.class=com.thahnen.gradle.UniformDependenciesPlugin
 plugin.version=1.0.0
 
+# GitHub Maven Nexus
+maven.nexus=https://maven.pkg.github.com/thahnen/UniformDependenciesPlugin
+maven.nexus.name=GitHubPackages
+
 # Gradle properties
 org.gradle.caching=true
 org.gradle.console=auto
