--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -68,7 +68,11 @@ jobs:
         with:
           jacoco-csv-file: build/reports/jacoco/test/jacocoTestReport.csv
       
-      # 10) commit changes
+      # 10) publish Gradle Plugin to GitHub Maven Nexus
+      # - name: Plugin upload
+      #   run: ./gradlew publish
+
+      # 11) commit changes
       - name: commit badges
         uses: EndBug/add-and-commit@v7
         with:
