--- a/gradle.properties
+++ b/gradle.properties
@@ -5,9 +5,9 @@
 plugin.name=UniformDependenciesPlugin
 plugin.displayName=Plugin to handle uniform dependencies
 plugin.description=A plugin to handle dependencies based on a properties file provided containing all dependencies used
-plugin.group=com.thahnen.gradle
-plugin.id=com.thahnen.gradle.uniformdependencies
-plugin.class=com.thahnen.gradle.UniformDependenciesPlugin
+plugin.group=com.github.thahnen
+plugin.id=com.github.thahnen.uniformdependencies
+plugin.class=com.github.thahnen.UniformDependenciesPlugin
 plugin.version=1.0.0
 
 # GitHub Maven Nexus
