--- a/src/main/resources/META-INF/gradle-plugins/com.thahnen.gradle.uniformdependencies.properties
+++ b/src/main/resources/META-INF/gradle-plugins/com.thahnen.gradle.uniformdependencies.properties
@@ -1,1 +1,1 @@
-implementation-class=com.thahnen.gradle.UniformDependenciesPlugin
+implementation-class=com.github.thahnen.UniformDependenciesPlugin
