Trying to fix upload to GitHub Maven Nexus
Try #2

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,7 @@ plugin.displayName=Plugin to handle uniform dependencies
 plugin.description=A plugin to handle dependencies based on a properties file provided containing all dependencies used
 plugin.group=com.github.thahnen
 plugin.id=com.github.thahnen.uniformdependencies
+plugin.artifactId=uniformdependencies
 plugin.class=com.github.thahnen.UniformDependenciesPlugin
 plugin.version=1.0.0
 
