Remove publishing to GitHub Maven Nexus
Some improvements regarding tests and JaCoCo coverage!
Publishing only possible to my private Maven Nexus ;)

--- a/prj-test-kotlin/gradle.properties
+++ b/prj-test-kotlin/gradle.properties
@@ -1,5 +1,6 @@
 
 # UniformDependenciesPlugin configuration (see https://github.com/thahnen/UniformDependenciesPlugin)
 plugins.uniformdependencies.path=/scripts/dependencies.properties
+plugins.uniformdependencies.strictness=LOOSE
 
 kotlin.code.style=official
