Updated Gradle to version 6.9.1
Also changed plugin version to be a pre release of next version.
Can not be published by accident!

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ plugin.description=A plugin to handle dependencies based on a properties file pr
 plugin.group=com.github.thahnen
 plugin.id=com.github.thahnen.uniformdependencies
 plugin.class=com.github.thahnen.UniformDependenciesPlugin
-plugin.version=1.0.0
+plugin.version=1.0.1-pre
 
 # GitHub Maven Nexus
 maven.nexus=https://maven.pkg.github.com/thahnen/UniformDependenciesPlugin
